yamls/keycloak-integrated-yamls/jupyter-api.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jupyter-api
  name: katonic-service-api
  namespace: kubeflow
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: jupyter-api
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jupyter-api
  name: katonic-service-api
  namespace: kubeflow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jupyter-api
  template:
    metadata:
      labels:
        app: jupyter-api
    spec:
      containers:
      - image: change-jupyter-api-image-name
        imagePullPolicy: IfNotPresent
        name: jupter-notebook-apis
      imagePullSecrets:
      - name: docker-hub-secret
      serviceAccount: jupy-api
      serviceAccountName: jupy-api
