yamls/keycloak-integrated-yamls/keycloak-all.yml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak-postgresql
  namespace: keycloak
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: keycloak
    component: database
  clusterIP: None 
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak-svc
  namespace: keycloak
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: keycloak
    type: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: keycloak
    type: frontend
  name: keycloak
  namespace: keycloak
spec:
  serviceName: keycloak-svc
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
      type: frontend
  template:
    metadata:
      labels:
        app: keycloak
        type: frontend
    spec:
      containers:
      - env:
        - name: DB_VENDOR
          value: POSTGRES
        - name: DB_SCHEMA
          value: public
        - name: DB_ADDR
          value: keycloak-postgresql
        - name: DB_PORT
          value: "5432"
        - name: DB_DATABASE
          value: root
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: POSTGRES_USERNAME
              name: keycloak-db-secret
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: POSTGRES_PASSWORD
              name: keycloak-db-secret
        - name: KEYCLOAK_USER
          value: admin
        - name: KEYCLOAK_PASSWORD
          value: gai0EifaiVe9itautry
        - name: CACHE_OWNERS_COUNT
          value: "2"
        - name: CACHE_OWNERS_AUTH_SESSIONS_COUNT
          value: "2"
        - name: PROXY_ADDRESS_FORWARDING
          value: "true"
        - name: KEYCLOAK_STATISTICS
          value: all
        image: katonic/keycloak:v4.2
        name: keycloak
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
      imagePullSecrets:
      - name: docker-hub-secret
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: keycloak
    component: database
  name: keycloak-postgresql
  namespace: keycloak
spec:
  serviceName: keycloak-postgresql
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
      component: database
  template:
    metadata:
      labels:
        app: keycloak
        component: database
      name: keycloak-postgresql
    spec:
      containers:
      - env:
        - name: POSTGRESQL_USER
          valueFrom:
            secretKeyRef:
              key: POSTGRES_USERNAME
              name: keycloak-db-secret
        - name: POSTGRESQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: POSTGRES_PASSWORD
              name: keycloak-db-secret
        - name: POSTGRESQL_DATABASE
          value: root
        image: katonic/keycloak-postgres:0.1
        imagePullPolicy: IfNotPresent
        name: keycloak-postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: keycloak-postgresql-claim
      imagePullSecrets:
      - name: docker-hub-secret
  volumeClaimTemplates:
  - metadata:
      name: keycloak-postgresql-claim
    spec:
      accessModes: 
      - ReadWriteOnce
      storageClassName: default
      resources:
        requests:
          storage: 1Gi

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-vs-keycloak
  namespace: keycloak
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - torrent.katonic.ai
  http:
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host: keycloak-svc.keycloak.svc.cluster.local
        port:
          number: 80
