yamls/keycloak-integrated-yamls/nifi.yml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: nifi
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nifi
  name: nifi
  namespace: nifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nifi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nifi
    spec:
      containers:
      - args:
        - --ssl-insecure-skip-verify=true
        - --set-authorization-header=true
        - --show-debug-on-error=true
        - --skip-provider-button=true
        - --provider=keycloak
        - --client-id=myapp
        - --scope=group_scope
        - --client-secret=c8b01721-ebee-4d33-8072-861f53166a34
        - --login-url=https://torrent.katonic.ai/auth/realms/katonic/protocol/openid-connect/auth
        - --redeem-url=https://torrent.katonic.ai/auth/realms/katonic/protocol/openid-connect/token
        - --profile-url=https://torrent.katonic.ai/auth/realms/katonic/protocol/openid-connect/userinfo
        - --validate-url=https://torrent.katonic.ai/auth/realms/katonic/protocol/openid-connect/userinfo
        - --upstream=http://localhost:8080/
        - --cookie-secure=true
        - --cookie-expire=168h0m
        - --cookie-refresh=60m
        - --cookie-secret=L1BibFNSaTFDRGdYbkwxcDM0dW5Vdz09
        - --cookie-domain=torrent.katonic.ai
        - --http-address=0.0.0.0:4180
        - --redirect-url=https://torrent.katonic.ai/oauth2/callback
        - --email-domain=*
        # - --keycloak-group=allusers
        - --oidc-email-claim=sub
        image: katonic/oauth2-proxy:v1
        imagePullPolicy: IfNotPresent
        name: oauth2-con
        ports:
        - containerPort: 4180
          protocol: TCP
      - image: change-nifi-image-name
        name: nifi
        resources: {}
        ports:
         - containerPort: 8080
           protocol: TCP
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nifi
  name: nifi
  namespace: nifi
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 4180
  selector:
    app: nifi
status:
  loadBalancer: {}
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nifi-vs
  namespace: nifi
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - torrent.katonic.ai
  http:
  - match:
    - uri:
        prefix: /nifi
    rewrite:
      uri: /nifi
    route:
    - destination:
        host: nifi.nifi.svc.cluster.local
        port:
          number: 8080
