yamls/keycloak-integrated-yamls/old-filebrowser.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: file-manager
  name: file-manager
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-manager
  template:
    metadata:
      labels:
        app: file-manager
    spec:
      containers:
      - args:
        - --ssl-insecure-skip-verify=true
        - --set-authorization-header=true
        - --show-debug-on-error=true
        - --skip-provider-button=true
        - --provider=keycloak
        - --client-id=myapp
        - --scope=group_scope
        - --client-secret=c8b01721-ebee-4d33-8072-861f53166a34
        - --login-url=https://torrent.katonic.ai/auth/realms/katonic/protocol/openid-connect/auth
        - --redeem-url=https://torrent.katonic.ai/auth/realms/katonic/protocol/openid-connect/token
        - --profile-url=https://torrent.katonic.ai/auth/realms/katonic/protocol/openid-connect/userinfo
        - --validate-url=https://torrent.katonic.ai/auth/realms/katonic/protocol/openid-connect/userinfo
        - --upstream=http://localhost:3020/
        - --cookie-secure=true
        - --cookie-expire=168h0m
        - --cookie-refresh=60m
        - --cookie-secret=L1BibFNSaTFDRGdYbkwxcDM0dW5Vdz09
        - --cookie-domain=torrent.katonic.ai
        - --http-address=0.0.0.0:4180
        - --redirect-url=https://torrent.katonic.ai/oauth2/callback
        - --email-domain=*
        # - --keycloak-group=allusers
        - --oidc-email-claim=sub
        image: katonic/oauth2-proxy:v1
        imagePullPolicy: IfNotPresent
        name: oauth2-con
        ports:
        - containerPort: 4180
          protocol: TCP
      - image: change-file-manager-image-name
        imagePullPolicy: IfNotPresent
        name: file-manager
        ports:
        - containerPort: 3020
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/src/app/files
          name: datasets
      imagePullSecrets:
      - name: docker-hub-secret
      restartPolicy: Always
      volumes:
      - name: datasets
        persistentVolumeClaim:
          claimName: nfs-storage-pvc
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: file-manager
  name: file-manager
  namespace: application
spec:
  ports:
  - port: 3020
    protocol: TCP
    targetPort: 4180
  selector:
    app: file-manager
  sessionAffinity: None
  type: ClusterIP

---


apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: filemanager-vs
  namespace: application
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - torrent.katonic.ai
  http:
  - match:
    - uri:
        prefix: /filemanager
    rewrite:
      uri: /filemanager
    route:
    - destination:
        host: file-manager.application.svc.cluster.local
        port:
          number: 3020
